<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BsCardioTracker</string>
    <string name="action_settings">Settings</string>
    <string name="track_cardio_session">Track Cardio Session</string>
    <string name="view_recent_cardio_sessions">View Recent Cardio Sessions</string>
    <string name="tracking_session">Tracking Cardion Session</string>
    <string name="temp">TEMP</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="pace">Pace</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="save_log">Save To BodySpace</string>
    <string name="clock_default">--:--</string>
    <string name="distance_default">-.--</string>
    <string name="miles">miles</string>
    <string name="minutes_per_mile">min/mile</string>
    <string name="done">Done</string>

    <string name="create_history_table">CREATE TABLE IF NOT EXISTS history (_id INTEGER PRIMARY KEY AUTOINCREMENT, date INTEGER, duration INTEGER, distance REAL, pace INTEGER, json TEXT);</string>

</resources>
