<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/date_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp" />

    <LinearLayout
            android:id="@+id/stats_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_display"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/time_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/clock_default"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:baselineAligned="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/distance_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:text="@string/distance_default"/>

            <TextView
                    android:id="@+id/distance_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"
                    android:text="@string/miles"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:baselineAligned="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/pace_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:text="@string/clock_default"/>

            <TextView
                    android:id="@+id/pace_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"
                    android:text="@string/minutes_per_mile"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/labels_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats_container"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

        <TextView
                android:id="@+id/time_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:text="@string/time"/>

        <TextView
                android:id="@+id/distance_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:text="@string/distance"/>

        <TextView
                android:id="@+id/pace_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:text="@string/pace"/>

    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/done"/>

    <fragment
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/labels_container"
        android:layout_above="@id/done_button"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        class="com.google.android.gms.maps.SupportMapFragment"/>

</RelativeLayout>